--- a/src/LoginCidadao/IdCulturaBundle/Resources/translations/messages.en.yml
+++ b/src/LoginCidadao/IdCulturaBundle/Resources/translations/messages.en.yml
@@ -15,8 +15,9 @@ scope.city: City
 scope.badges: Badges
 scope.picture: Picture
 scope.public_profile: Public Profile
+scope.phone_number: Phone Number
 scope_details.public_profile: Your public profile contains your first name, age range and your certificates (badges).
-'Citizen''s Login': 'ID Cultura'
+'ID Cultura': 'ID Cultura'
 'Need help?': 'Need help?'
 '%link_start%Create your account%link_end%': '%link_start%Create your account%link_end%'
 'One account to all of the Government''s services': 'One account to all of the Government''s services'
@@ -29,9 +30,6 @@ Help: Help
 'Click again to confirm': 'Click again to confirm'
 'Please, wait...': 'Please, wait...'
 Revoked: Revoked
-'Authorize <strong>%client_name%</strong> to access your information?': 'Authorize <strong>%client_name%</strong> to access your information?'
-'<strong>%client_name%</strong> will be granted the following information and permissions:': '<strong>%client_name%</strong> will be granted the following information and permissions:'
-'About <strong>%client_name%</strong>': 'About <strong>%client_name%</strong>'
 'Edit profile': 'Edit profile'
 Username: Username
 Email: Email
@@ -42,7 +40,7 @@ CEP: CEP
 'Username:': 'Username:'
 'Email:': 'Email:'
 'You''ll need a password': 'You''ll need a password'
-'To make sure that you can access the Citizen''s Login even if you lose access to your Facebook or Twitter account, please define a password.': 'To make sure that you can access the ID Cultura even if you lose access to your Facebook or Twitter account, please define a password.'
+'To make sure that you can access the ID Cultura even if you lose access to your Facebook or Twitter account, please define a password.': 'To make sure that you can access the ID Cultura even if you lose access to your Facebook or Twitter account, please define a password.'
 'Type in your password here:': 'Type in your password here:'
 'And then confirm it here:': 'And then confirm it here:'
 'To confirm your change, type your current password below:': 'To confirm your change, type your current password below:'
@@ -78,7 +76,6 @@ Deactivated: Deactivated
 'Create your account': 'Create your account'
 'Change username': 'Change username'
 exception.alreadyLinkedAccount: 'This account is already linked with another user. You have to unlink from that user before linking to this current user.'
-contact.title: 'Fale conosco'
 cpf.registration.title: 'Registro de CPF'
 'Your login': 'Your login'
 '<a href="%link%">Background picture</a> by %name%': '<a href="%link%">Background picture</a> by %name%'
@@ -90,9 +87,9 @@ notification.unconfirmed.email.text: "<p>To use this system you must use a valid
 notification.empty.password.title: 'You don''t have a password!'
 notification.empty.password.shortText: 'Click here to define your password.'
 notification.empty.password.text: ''
-'This service is already active in your Citizen''s Login account': 'This service is already active in your ID Cultura account'
+'This service is already active in your ID Cultura account': 'This service is already active in your ID Cultura account'
 'Deactivate this service': 'Deactivate this service'
-'This service is not active in your Citizen''s Login account': 'This service is not active in your ID Cultura account'
+'This service is not active in your ID Cultura account': 'This service is not active in your ID Cultura account'
 'Activate this service': 'Activate this service'
 social-networks.unlink.no-password: 'You must define a password before unlinking any social network.'
 social-networks.unlink.facebook.success: 'Facebook successfully unlinked.'
@@ -136,7 +133,7 @@ No: No
 'One account. The entire Government.': 'One account. The entire Government.'
 'Creative commons': Creative commons
 lc.html.title: 'ID Cultura'
-'About Citizen''s Login': 'About ID Cultura'
+'About ID Cultura': 'About ID Cultura'
 'This is the Citizen Login': 'This is the Citizen Login'
 'To enjoy all the benefits of Citizen Login, please check your information and submit the following form.': 'To enjoy all the benefits of Citizen Login, please check your information and submit the following form.'
 'After registering you''ll receive a confirmation email to proceed the activation of your account.': 'After registering you''ll receive a confirmation email to proceed the activation of your account.'
@@ -222,23 +219,9 @@ You don't have any activity log.: You don't have any activity log.
 'Select a state below:': 'Select a state below:'
 Firstname: First name
 Surname: Surname
-'After completing your information, click the following button to continue:': 'After completing your information, click the following button to continue:'
-<strong>%client%</strong> needs some additional details about you. Please complete the missing information below to continue.: <strong>%client%</strong> needs some additional details about you. Please complete the missing information below to continue.
-Personal Details: Personal Details
-Complete Missing Fields: Complete Missing Fields
 If you prefer, it's possible to use other services to login or create your account.: If you prefer, it's possible to use other services to login or create your account.
 Type your password to confirm the activation.: Type your password to confirm the activation.
 Current password: Current password
-<strong>%client%</strong> requires that you have a validated email in order to proceed.: <strong>%client%</strong> requires that you have a validated email in order to proceed.
-Validating your email address is pretty simple and fast. You just have to click the link or button in the email we sent you.: Validating your email address is pretty simple and fast. You just have to click the link or button in the email we sent you.
-After you validate your email address this screen will change automatically and you'll proceed to <strong>%client%</strong>.: After you validate your email address this screen will change <strong>automatically</strong> and you'll proceed to <strong>%client%</strong>.
-I'm having trouble finding the confirmation email: I'm having trouble finding the confirmation email
-If you are having trouble to find the confirmation email, please make sure it isn't in the junk mail section of your email program or site.: If you are having trouble to find the confirmation email, please make sure it isn't in the junk mail section of your email program or site.
-If you are certain the email was not received, it's possible that you mistyped your email address. You can change you email address below.: If you are certain the email was not received, it's possible that you mistyped your email address. You can change you email address below.
-If your email is mistyped, correct it and click the following button.: If your email is mistyped, correct it and click the following button.
-Change Email: Change Email
-Your email was successfully validated.: Your email was successfully validated.
-Back to %client%: Back to %client%
 Mobile: Mobile
 Copy: Copy
 Copied: Copied
@@ -395,15 +378,17 @@ home:
 compact.logout.button: Logout
 person.form:
     firstName:
-        label: Name
-        placeholder: Type your name
+        label: First name
+        placeholder: Type your first name
     surname:
         label: Last name
         placeholder: Type your last name
     cpf:
         placeholder: Type your CPF (brazilian taxpayer ID)
     birthdate.placeholder: dd/mm/yyyy
-    mobile.placeholder: Type your mobile phone
+    mobile:
+        label: Mobile phone
+        placeholder: Type your mobile phone
 tasks.confirm_email:
     title: Confirm your email to continue
     body: An email was sent to the address you registered. Open this email and click the confirmation button on the message.
@@ -411,6 +396,10 @@ tasks.confirm_email:
         title: Didn''t receive it?
         body: You checked even your spam folder and didn''t find the message? Don''t worry, you can sent it again by clicking the following button.
         button: Resend Email
+        before:
+            title: Before we send your email
+            body: Before resending your email, please check that your email address below is correct and fix it if necessary.
+            button: Send Validation Email
     resent.alert: Another message was sent
     success.alert: Email successfuly verified!
 Close: Close
@@ -424,3 +413,99 @@ resetting.check_email: An email with password recovery instructions was sent to 
 resetting.reset.title: Creating new Password
 resetting.reset.description: Fill the following fields to create a new password.
 resetting.reset.submit: Change password
+openid.session.end:
+    title:
+    logging_out: You are being logged out.
+    logged_out: You are logged out.
+    not_logged_out: You were not logged out.
+    continue_to: You'll continue to <strong>%host%</strong>
+    submit: Continue
+    home_button: Go to home page
+    invalid_id_token: Invalid request. The ID Token is not valid.
+    client:
+        logging_out: <strong>%client%</strong> is logging you out.
+        logged_out: You were logged out by <strong>%client%</strong>
+        not_logged_out: You were NOT logged out by <strong>%client%</strong>
+authorization:
+    title: Authorize <strong>%client_name%</strong> to access your information?
+    description: '<strong>%client_name%</strong> will be granted the following information and permissions:'
+    about: 'About <strong>%client_name%</strong>'
+error.generic:
+    title: There was an error 😞
+    body: There was an error processing this page. If this is a recurring problem you can <a href="%contact_url%">contact us</a> to get help.
+error.404:
+    title: Page not found
+    body: The requested page couldn't be located. Checkout for any URL misspelling.
+dynamic_form:
+    title: Complete your information
+    body: <strong>%client%</strong> needs some additional details about you. Please complete the missing information below to continue.
+    submit:
+        label: 'After completing your information, click the following button to continue:'
+        button: Save
+    skip:
+        open_warning: Skip this step
+        warning: If you chose to skip this step now, it is possible that the service you are trying to access will ask you again for this information or will deny your access. Also, we'll keep suggesting this step on each new access.
+        confirm: Skip anyway
+    email_verification:
+        body: <strong>%client%</strong> requires that you have a validated email in order to proceed.
+        how_to: Validating your email address is pretty simple and fast. You just have to click the link or button in the email we sent you.
+        post_verifying: After you validate your email address this screen will change <strong>automatically</strong> and you'll proceed to <strong>%client%</strong>.
+        success: Your email was successfully validated.
+        back_to_client: Back to %client%
+        help:
+            cant_find_email:
+                title: I'm having trouble finding the confirmation email
+                body: If you are having trouble to find the confirmation email, please make sure it isn't in the junk mail section of your email program or site.
+                change_email:
+                    body: If you are certain the email was not received, it's possible that you mistyped your email address. You can change you email address below.
+                    submit:
+                        label: If your email is mistyped, correct it and click the following button.
+                        button: Change Email
+tasks.fill_email:
+    title: Informe um endereço de Email
+    body: O serviço usado para criar sua conta, %service%, não nos enviou seu endereço de email. Por favor, digite seu endereço a seguir para continuar.
+duplicate_email:
+    title: This email is already in use
+    body: You tried to register using an email that belongs to an existing account.
+    tip: If what you tried to do was to connect a service to your account you'll have to login into this account to then connect it.
+    button.login: Login
+contact:
+    title: Contact us
+    body: To get technical support related to Citizen Login please fill this form describing the problem you are experiencing.
+    form:
+        name:
+            label: Name
+            placeholder: Type your name
+        email:
+            label: Email
+            placeholder: Type your email
+        message:
+            label: Message
+            placeholder: Describe the technical problem you are having.
+        submit: Send message
+profile:
+    title: Profile
+    picture:
+        change: Change
+        upload_another: Upload another picture
+        use_facebook: Use your Facebook picture
+        change_to:
+            template: Your profile picure will be changed to <strong></strong>
+            facebook: Your Facebook profile picure will be used
+    personal_info:
+        title: Personal Information
+    contact_info:
+        title: Contact Information
+    connections:
+        title: Social Networks and other connections
+        connect:
+            facebook: Connect with Facebook
+            twitter: Connect with Twitter
+            google: Connect with Google
+        disconnect:
+            confirm:
+                template: Do you really want to unlink <strong class="social-network-name"></strong>?
+                yes: Yes
+                no: No
+    submit: Save
+scope_details.handle.title: What is this?
